--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,3 @@
-absl-py==2.2.2
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.0
-aiosignal==1.3.2
-attrs==25.3.0
-blinker==1.9.0
-certifi==2025.4.26
-chardet==5.2.0
-charset-normalizer==3.4.2
-click==8.2.1
-colorama==0.4.6
-DataProperty==1.1.0
-dill==0.3.8
-filelock==3.18.0
-Flask==3.1.1
-flask-cors==6.0.1
-frozenlist==1.6.0
-fsspec==2025.3.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-lxml==5.4.0
-MarkupSafe==3.0.2
-mbstrdecoder==1.1.4
-multidict==6.4.4
-multiprocess==0.70.16
-networkx==3.4.2
-packaging==25.0
-pathvalidate==3.2.3
-portalocker==3.1.1
-propcache==0.3.1
-psutil==7.0.0
-pyarrow==20.0.0
-pybind11==2.13.6
-pytablewriter==1.2.1
-python-dateutil==2.9.0.post0
-pytz==2025.2
-pywin32==310
-regex==2024.11.6
-requests==2.32.3
-rouge_score==0.1.2
-sacrebleu==2.5.1
-safetensors==0.5.3
-setuptools==80.8.0
-six==1.17.0
-sqlitedict==2.1.0
-sympy==1.14.0
-tabledata==1.3.4
-tabulate==0.9.0
-tcolorpy==0.1.7
-threadpoolctl==3.6.0
-typepy==1.3.4
-typing_extensions==4.13.2
-tzdata==2025.2
-urllib3==2.4.0
-Werkzeug==3.1.3
-word2number==1.1
-xxhash==3.5.0
-yarl==1.20.0
-zstandard==0.23.0
+Flask
+Flask-Cors
+requests
